--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h1><i class="fas fa-grip-lines"></i></h1>
             <div class="saying">
               <h1 id="sayingHead">Never lose your faith.</h1>
-              <p id="sayingQuote">its's often in the darkest moments where you find clarity,hope and motivation to overcome.</p>
+              <p id="sayingQuote">its's often in the darkest moments where you find motivation to overcome.</p>
               <a href="https://protfolio-ashutosh.netlify.app/" target ="_blank" class="button-55" role="button">The Journey ➡</a>
             </div>
           </div>
